myproxy (6.1.24-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash in myproxy_bootstrap_trust() with OpenSSL 1.1.0c

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jan 2017 11:07:04 -0500

myproxy (6.1.23-1+gt6.@distro@) @distro@; urgency=low

  * Fixes for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Thu, 05 Jan 2017 17:21:12 -0500

myproxy (6.1.22-1+gt6.@distro@) @distro@; urgency=low

  * Check for openssl 101e for epel5

 -- Globus Toolkit <support@globus.org>  Tue, 13 Dec 2016 07:33:07 -0500

myproxy (6.1.21-2+gt6.@distro@) @distro@; urgency=low

  * Do not overwrite configuration flags

 -- Globus Toolkit <support@globus.org>  Mon, 19 Sep 2016 16:44:06 -0400

myproxy (6.1.20-1+gt6.@distro@) @distro@; urgency=low

  * Updates for el.5 with openssl101e

 -- Globus Toolkit <support@globus.org>  Fri, 09 Sep 2016 14:56:37 -0400

myproxy (6.1.19-1+gt6.@distro@) @distro@; urgency=low

  * update myproxy debug/error msgs for accepted_peer_names type change

 -- Globus Toolkit <support@globus.org>  Wed, 31 Aug 2016 11:16:14 -0400

myproxy (6.1.18-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:39:08 -0400

myproxy (6.1.17-1+gt6.@distro@) @distro@; urgency=low

  * Handle error returns from OCSP_parse_url

 -- Globus Toolkit <support@globus.org>  Wed, 09 Mar 2016 14:50:00 -0600

myproxy (6.1.16-1+gt6.@distro@) @distro@; urgency=low

  * Handle invalid proxy_req type

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 10:21:54 -0500

myproxy (6.1.15-1+gt6.@distro@) @distro@; urgency=low

  * GT-616: Myproxy uses resolved IP address when importing names

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 15:11:23 -0400

myproxy (6.1.14-1+gt6.@distro@) @distro@; urgency=low

  * improve rfc2818 name comparison handling

 -- Globus Toolkit <support@globus.org>  Mon, 08 Jun 2015 19:14:37 -0400

myproxy (6.1.13-2+gt6.@distro@) @distro@; urgency=low
